--- a/src/app/layout/material/material.component.html
+++ b/src/app/layout/material/material.component.html
@@ -3,16 +3,13 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-expansion-panel>
-      <mat-expansion-panel-header></mat-expansion-panel-header>
-      mat
-    </mat-expansion-panel>
+    <mat-toolbar>Ng-template</mat-toolbar>
+    <mat-expansion-panel *ngFor="let module of navigation">
+      <mat-expansion-panel-header>{{module.module}}</mat-expansion-panel-header>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a *ngFor="let route of module.routes" mat-list-item [routerLink]="[route.uri]">{{route.title}}</a>
     </mat-nav-list>
+    </mat-expansion-panel>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
